--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -11,7 +11,7 @@
         <a class="nav-link" routerLink="/newsfeed" routerLinkActive="active">Lazsoc Home </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/hiring" routerLinkActive="active">Hiring</a>
+        <a class="nav-link" routerLink="/resources" routerLinkActive="active">Resources</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/clubs" routerLinkActive="active">Our Clubs</a>
