--- a/src/app/newsfeed/newsfeed.component.html
+++ b/src/app/newsfeed/newsfeed.component.html
@@ -1,21 +1,20 @@
-<div class="container-fluid" style="margin-left:5rem">
-  <div class="row">
-    <div class="col-sm-3 col-md-3 col-lg-3 mt-4" style="position:fixed">
-      <div class="card">
-        <img class="card-img-top" src="assets/img/Startup Consulting.jpg">
-        <div class="card-block">
+<div class="container-fluid">
+  <div class="row justify-content-center">
+    <div class="col-sm-3 col-md-3 col-lg-3 mt-4">
+      <div class="card sticky">
+        <div class="card-header d-flex">
           <img src="https://www2.mmu.ac.uk/media/mmuacuk/style-assets/images/r-research/profile-Zeyad.jpg" class="avatar">
-          <h4 class="card-title align-self-center profile-name">Richard Hugessen</h4>
+          <h4 class="card-title profile-name">Richard <br> Hugessen</h4>
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">Cras justo odio</li>
-          <li class="list-group-item">Dapibus ac facilisis in</li>
-          <li class="list-group-item">Vestibulum at eros</li>
+          <li class="list-group-item">All</li>
+          <li class="list-group-item">Events</li>
+          <li class="list-group-item">Case Competitions</li>
+          <li class="list-group-item">Laz Latest/Blog</li>
         </ul>
       </div>
     </div>
 
-    <div class="col-sm-3 col-md-3 col-lg-3 mt-4 invisible"></div>
     <div class="col-sm-5 col-md-5 col-lg-5 mt-4">
       <div *ngFor="let event of events" style="margin-bottom:2rem">
         <div class="card card-inverse card-info">
@@ -36,19 +35,73 @@
       </div>
     </div>
     <div class="col-sm-3 col-md-3 col-lg-3 mt-4">
-      <div class="card">
-        <div class="card-header">
-          Calendar
+      <div class="card sticky">
+        <div class="card-header py-2 text-center">
+          <b>Calendar</b>
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item">Cras justo odio</li>
-          <li class="list-group-item">Dapibus ac facilisis in</li>
-          <li class="list-group-item">Vestibulum at eros</li>
+          <li class="list-group-item">
+            <div class="d-flex w-100">
+              <img src="assets/img/calendar-icon.svg" class="mr-3">
+              <div class="d-flex flex-column">
+                <span class="event-title-font">{{events[3].title}}</span>
+                <span class="event-sub-heading">{{events[3].location}}</span>
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="d-flex w-100">
+              <img src="assets/img/calendar-icon.svg" class="mr-3">
+              <div class="d-flex flex-column">
+                <span class="event-title-font">{{events[4].title}}</span>
+                <span class="event-sub-heading">{{events[4].location}}</span>
+              </div>
+              </div>
+          </li>
+          <li class="list-group-item">
+            <div class="d-flex w-100">
+              <img src="assets/img/calendar-icon.svg" class="mr-3">
+              <div class="d-flex flex-column">
+                <span class="event-title-font">{{events[2].title}}</span>
+                <span class="event-sub-heading">{{events[2].location}}</span>
+              </div>
+              </div>
+          </li>
         </ul>
-        <div class="card-block">
-          <a href="#" class="card-link">Card link</a>
-          <a href="#" class="card-link">Another link</a>
+      </div>
+      <div class="card mt-3 sticky-updates">
+        <div class="card-header py-2 text-center">
+          <b>Updates</b>
         </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">
+            <div class="d-flex w-100">
+              <img src="assets/img/calendar-icon.svg" class="mr-3">
+              <div class="d-flex flex-column">
+                <span class="event-title-font">{{events[3].title}}</span>
+                <span class="event-sub-heading">{{events[3].location}}</span>
+              </div>
+            </div>
+          </li>
+          <li class="list-group-item">
+            <div class="d-flex w-100">
+              <img src="assets/img/calendar-icon.svg" class="mr-3">
+              <div class="d-flex flex-column">
+                <span class="event-title-font">{{events[4].title}}</span>
+                <span class="event-sub-heading">{{events[4].location}}</span>
+              </div>
+              </div>
+          </li>
+          <li class="list-group-item">
+            <div class="d-flex w-100">
+              <img src="assets/img/calendar-icon.svg" class="mr-3">
+              <div class="d-flex flex-column">
+                <span class="event-title-font">{{events[2].title}}</span>
+                <span class="event-sub-heading">{{events[2].location}}</span>
+              </div>
+              </div>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
