Stylistic Changes and integration of fake blog posts

--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -1,9 +1,9 @@
-<nav class="navbar sticky-top navbar-toggleable-md navbar-light bg-faded">
+<nav class="navbar sticky-top navbar-toggleable-md navbar-light bg-faded" style="background-color:#FFFFFF; height:70px">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <a class="navbar-brand" routerLink="/newsfeed">
-    <img src="../../assets/img/Lazsoc-logo.png" width="50" height="30" alt="">
+    <img src="../../assets/img/Lazsoc-logo.png" width="80" height="auto" alt="">
   </a>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
