--- a/src/app/nav-bar/laz-navbar.css
+++ b/src/app/nav-bar/laz-navbar.css
@@ -2,4 +2,5 @@
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1), 0 2px 2px 0 rgba(0, 0, 0, 0.1);
   /*background-color:#422c89;*/
   font-family:Calluna-Semibold;
+  font-size:17px;
 }
