--- a/src/app/newsfeed/newsfeed.component.css
+++ b/src/app/newsfeed/newsfeed.component.css
@@ -14,9 +14,9 @@ h5 {
     font-size: 1em;
     overflow: hidden;
     padding: 0;
-    border: none;
+    border: 1px solid darkgrey;
     border-radius: 0;
-    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    /*box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);*/
 }
 
 .card-block {
@@ -33,10 +33,11 @@ h5 {
     display: block;
     width: 100%;
     height: auto;
+    border-radius:0;
 }
 
-.card-title {
-    font-size: 1.2em;
+.club-title {
+    font-size: 1em;
     font-family:Calluna-Bold;
     line-height: 1.2857em;
     font-weight:500;
@@ -50,6 +51,8 @@ h5 {
     font-family:Calluna;
     clear: both;
     margin-top: .5em;
+    /*margin-left: 65px;*/
+    font-size:0.9em;
     color: rgba(0, 0, 0, .68);
 }
 
@@ -88,6 +91,14 @@ h5 {
     height:50px;
     border-radius: 50%;
 }
+.club-avatar {
+    display: block;
+    width: 50px;
+    height:50px;
+    border-radius: 50%;
+    /*border: 1px solid darkgrey;*/
+}
+
 
 .profile-inline {
     position: relative;
@@ -110,6 +121,14 @@ h5 {
 
 .profile-name {
   margin-left: 10px;
+  font-size: 1.1em;
+  font-family:Calluna-Bold;
+  font-weight:500;
+}
+.profile-subheader {
+  margin-left:10px;
+  font-size: 0.8em;
+  font-family:Calluna;
 }
 .event-title-font {
   font-family:Calluna-Semibold;
@@ -124,10 +143,20 @@ h5 {
 .sticky {
     position: -webkit-sticky;
     position: sticky;
-    top: 80px;
+    top: 94px;
 }
 .sticky-updates{
   position: -webkit-sticky;
   position: sticky;
-  top: 340px;
+  top: 392px;
+}
+
+.card-header{
+  font-family:Calluna-Bold;
+  font-size:1.1em;
+}
+.list-group-item{
+  width:100%;
+  font-family:Calluna;
+  border-radius: 0;
 }
