--- a/src/app/newsfeed/newsfeed.component.html
+++ b/src/app/newsfeed/newsfeed.component.html
@@ -1,47 +1,64 @@
-<div class="container-fluid">
+<div class="container-fluid" style="background-color:#F5F5F5">
   <div class="row justify-content-center">
     <div class="col-sm-3 col-md-3 col-lg-3 mt-4">
       <div class="card sticky">
-        <div class="card-header d-flex">
-          <img src="https://www2.mmu.ac.uk/media/mmuacuk/style-assets/images/r-research/profile-Zeyad.jpg" class="avatar">
-          <h4 class="card-title profile-name align-self-center">Richard Hugessen</h4>
+        <div class="card-header d-flex align-items-center" style="height:100px">
+          <img src="https://www2.mmu.ac.uk/media/mmuacuk/style-assets/images/r-research/profile-Zeyad.jpg" class="avatar mr-2">
+          <div class="d-flex flex-column">
+            <h4 class="profile-name my-0">Richard Hugessen</h4>
+            <span class="profile-subheader my-0">Laurier BBA Candidate</span>
+          </div>
         </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">All</li>
-          <li class="list-group-item">Events</li>
-          <li class="list-group-item">Case Competitions</li>
-          <li class="list-group-item">Laz Latest/Blog</li>
-        </ul>
+        <div class="list-group">
+          <button class="list-group-item list-group-item-action" (click)="setNewsfeedState('all')" [ngClass]="{active: newsfeedState == 'all'}">All</button>
+          <button class="list-group-item list-group-item-action" (click)="setNewsfeedState('events')" [ngClass]="{active: newsfeedState == 'events'}">Events</button>
+          <button class="list-group-item list-group-item-action" (click)="setNewsfeedState('blog')" [ngClass]="{active: newsfeedState == 'blog'}">Laz Latest</button>
+          <button class="list-group-item list-group-item-action" (click)="setNewsfeedState('case-comps')" [ngClass]="{active: newsfeedState == 'case-comps'}">Case Comps</button>
+        </div>
       </div>
     </div>
 
     <div class="col-sm-5 col-md-5 col-lg-5 mt-4">
-      <div *ngFor="let event of events" style="margin-bottom:2rem">
-        <div class="card" style="background-color:rgba(0,0,0,0.05)">
 
+
+      <div *ngFor="let event of events" style="margin-bottom:2rem">
+        <!-- Events section -->
+        <div class="card" *ngIf="event.typeof == 'event'">
+          <div class="card-img-top">
+            <img class="card-img-top" src="assets/img/Startup Consulting.jpg" *ngIf="event.banner == ''">
+          </div>
             <div class="card-block">
               <div class="d-flex mb-2">
-                <img src="assets/img/thumbnails/{{clubs[event.club_id.toString()].app_logo}}" class="profile-avatar mr-3" alt="">
+                <img src="assets/img/thumbnails/{{clubs[event.club_id].app_logo}}" class="club-avatar mr-3" alt="">
                 <div class="d-flex flex-column">
-
-                  <h4 class="card-title mb-2">{{event.title}}</h4>
-                  <h4 class="card-datetime">{{event.start_date_time | getLongDate}}</h4>
+                  <h4 class="club-title mb-1">{{event.title}}</h4>
+                  <h4 class="card-datetime">{{clubs[event.club_id].name}}</h4>
                 </div>
               </div>
               <div class="card-text mb-2">
                   {{event.event_description}}
               </div>
-            <img class="card-img-top" src="assets/img/Startup Consulting.jpg" *ngIf="event.banner != ''">
+              {{event.start_date_time | getLongDate}}
             </div>
             <div class="card-footer">
                 <button class="btn btn-info btn-sm">Follow</button>
             </div>
         </div>
+
+        <!-- Laz Latest Section -->
+        <div class="card" *ngIf="event.typeof == 'blog'">
+          <div class="card-block">
+            <h4 class="club-title mb-1">{{event.title}}</h4>
+            <h4 class="card-datetime">{{event.author}}</h4>
+            <h4 class="card-datetime mt-2">{{event.sub_heading}}</h4>
+            <img src="assets/img/LazHall.jpg" alt="" style="width:100%">
+          </div>
+        </div>
       </div>
     </div>
     <div class="col-sm-3 col-md-3 col-lg-3 mt-4">
       <div class="card sticky">
-        <div class="card-header py-2 text-center">
+        <div class="card-header py-2" style="background-color:white">
           <b>Calendar</b>
         </div>
         <ul class="list-group list-group-flush">
@@ -49,8 +66,8 @@
             <div class="d-flex w-100">
               <img src="assets/img/calendar-icon.svg" class="mr-3">
               <div class="d-flex flex-column">
-                <span class="event-title-font">{{events[0].title}}</span>
-                <span class="event-sub-heading">{{events[0].location}}</span>
+                <span class="event-title-font">Laurier Accounting Association General Member's Kickoff Info Session</span>
+                <span class="event-sub-heading">Peters Building</span>
               </div>
             </div>
           </li>
@@ -58,8 +75,8 @@
             <div class="d-flex w-100">
               <img src="assets/img/calendar-icon.svg" class="mr-3">
               <div class="d-flex flex-column">
-                <span class="event-title-font">{{events[4].title}}</span>
-                <span class="event-sub-heading">{{events[4].location}}</span>
+                <span class="event-title-font">Laurier Accounting Association General Member's Kickoff Info Session</span>
+                <span class="event-sub-heading">Peters Building</span>
               </div>
               </div>
           </li>
@@ -67,15 +84,15 @@
             <div class="d-flex w-100">
               <img src="assets/img/calendar-icon.svg" class="mr-3">
               <div class="d-flex flex-column">
-                <span class="event-title-font">{{events[2].title}}</span>
-                <span class="event-sub-heading">{{events[2].location}}</span>
+                <span class="event-title-font">Laurier Accounting Association General Member's Kickoff Info Session</span>
+                <span class="event-sub-heading">Peters Building</span>
               </div>
               </div>
           </li>
         </ul>
       </div>
       <div class="card mt-3 sticky-updates">
-        <div class="card-header py-2 text-center">
+        <div class="card-header py-2" style="background-color:white">
           <b>Updates</b>
         </div>
         <ul class="list-group list-group-flush">
@@ -83,8 +100,8 @@
             <div class="d-flex w-100">
               <img src="assets/img/calendar-icon.svg" class="mr-3">
               <div class="d-flex flex-column">
-                <span class="event-title-font">{{events[3].title}}</span>
-                <span class="event-sub-heading">{{events[3].location}}</span>
+                <span class="event-title-font">Laurier Accounting Association General Member's Kickoff Info Session</span>
+                <span class="event-sub-heading">Peters Building</span>
               </div>
             </div>
           </li>
@@ -92,8 +109,8 @@
             <div class="d-flex w-100">
               <img src="assets/img/calendar-icon.svg" class="mr-3">
               <div class="d-flex flex-column">
-                <span class="event-title-font">{{events[4].title}}</span>
-                <span class="event-sub-heading">{{events[4].location}}</span>
+                <span class="event-title-font">Laurier Accounting Association General Member's Kickoff Info Session</span>
+                <span class="event-sub-heading">Peters Building</span>
               </div>
               </div>
           </li>
@@ -101,8 +118,8 @@
             <div class="d-flex w-100">
               <img src="assets/img/calendar-icon.svg" class="mr-3">
               <div class="d-flex flex-column">
-                <span class="event-title-font">{{events[2].title}}</span>
-                <span class="event-sub-heading">{{events[2].location}}</span>
+                <span class="event-title-font">Laurier Accounting Association General Member's Kickoff Info Session</span>
+                <span class="event-sub-heading">Peters Building</span>
               </div>
               </div>
           </li>
