--- a/src/app/newsfeed/newsfeed.component.html
+++ b/src/app/newsfeed/newsfeed.component.html
@@ -2,18 +2,22 @@
   <div class="row justify-content-center">
     <div class="col-sm-3 col-md-3 col-lg-3 mt-4">
       <div class="card sticky">
-        <div class="card-header d-flex align-items-center" style="height:100px">
+        <div class="card-header d-flex align-items-center" style="height:80px">
           <img src="https://www2.mmu.ac.uk/media/mmuacuk/style-assets/images/r-research/profile-Zeyad.jpg" class="avatar mr-2">
           <div class="d-flex flex-column">
             <h4 class="profile-name my-0">Richard Hugessen</h4>
             <span class="profile-subheader my-0">Laurier BBA Candidate</span>
           </div>
         </div>
+
         <div class="list-group">
-          <button class="list-group-item list-group-item-action" (click)="setNewsfeedState('all')" [ngClass]="{active: newsfeedState == 'all'}">All</button>
-          <button class="list-group-item list-group-item-action" (click)="setNewsfeedState('events')" [ngClass]="{active: newsfeedState == 'events'}">Events</button>
-          <button class="list-group-item list-group-item-action" (click)="setNewsfeedState('blog')" [ngClass]="{active: newsfeedState == 'blog'}">Laz Latest</button>
-          <button class="list-group-item list-group-item-action" (click)="setNewsfeedState('case-comps')" [ngClass]="{active: newsfeedState == 'case-comps'}">Case Comps</button>
+          <button class="list-group-item list-group-item-action py-2" (click)="setNewsfeedState('all')" [ngClass]="{active: newsfeedState == 'all'}">All</button>
+          <button class="list-group-item list-group-item-action py-2" (click)="setNewsfeedState('events')" [ngClass]="{active: newsfeedState == 'events'}">Events</button>
+          <button class="list-group-item list-group-item-action py-2" (click)="setNewsfeedState('blog')" [ngClass]="{active: newsfeedState == 'blog'}">Laz Latest</button>
+          <button class="list-group-item list-group-item-action py-2" (click)="setNewsfeedState('case-comps')" [ngClass]="{active: newsfeedState == 'case-comps'}">Case Comps</button>
+        </div>
+        <div class="card-block">
+          <span class="profile-name">Filters</span>
         </div>
       </div>
     </div>
@@ -41,17 +45,32 @@
               {{event.start_date_time | getLongDate}}
             </div>
             <div class="card-footer">
-                <button class="btn btn-info btn-sm">Follow</button>
+              <img src="assets/img/icons/heart.svg" class="icon">
+              <img src="assets/img/icons/bookmark.svg" class="icon">
+              <img src="assets/img/icons/arrow.svg" class="icon">
+              <img src="assets/img/icons/three-dots.svg" class="icon" style="float:right">
             </div>
         </div>
 
         <!-- Laz Latest Section -->
         <div class="card" *ngIf="event.typeof == 'blog' && (newsfeedState == 'blog' || newsfeedState == 'all')">
           <div class="card-block">
-            <h4 class="club-title mb-1">{{event.title}}</h4>
-            <h4 class="card-datetime">{{event.author}}</h4>
+            <div class="d-flex">
+              <img src="https://www2.mmu.ac.uk/media/mmuacuk/style-assets/images/r-research/profile-Zeyad.jpg" class="avatar mr-3">
+              <div class="d-flex flex-column">
+                <h4 class="club-title mb-1">Tips on Being a Laurier BBA Student #BBAProbs</h4>
+                <h4 class="card-datetime">{{event.author}}</h4>
+              </div>
+            </div>
+
             <h4 class="card-datetime mt-2">{{event.sub_heading}}</h4>
             <img src="assets/img/LazHall.jpg" alt="" style="width:100%">
+          </div>
+          <div class="card-footer">
+            <img src="assets/img/icons/heart.svg" class="icon">
+            <img src="assets/img/icons/bookmark.svg" class="icon">
+            <img src="assets/img/icons/arrow.svg" class="icon">
+            <img src="assets/img/icons/three-dots.svg" class="icon" style="float:right">
           </div>
         </div>
       </div>
