--- a/src/app/newsfeed/newsfeed.component.html
+++ b/src/app/newsfeed/newsfeed.component.html
@@ -9,11 +9,12 @@
             <span class="profile-subheader my-0">Laurier BBA Candidate</span>
           </div>
         </div>
+        <button type="button" class="btn btn-danger" style="border-radius:0">Have something to share?</button>
 
         <div class="list-group">
-          <button class="list-group-item list-group-item-action py-2" (click)="setNewsfeedState('all')" [ngClass]="{active: newsfeedState == 'all'}">All</button>
+          <button class="list-group-item list-group-item-action py-2" (click)="setNewsfeedState('all')" [ngClass]="{active: newsfeedState == 'all'}">Discover</button>
           <button class="list-group-item list-group-item-action py-2" (click)="setNewsfeedState('events')" [ngClass]="{active: newsfeedState == 'events'}">Events</button>
-          <button class="list-group-item list-group-item-action py-2" (click)="setNewsfeedState('blog')" [ngClass]="{active: newsfeedState == 'blog'}">Laz Latest</button>
+          <button class="list-group-item list-group-item-action py-2" (click)="setNewsfeedState('blog')" [ngClass]="{active: newsfeedState == 'blog'}">Posts</button>
           <button class="list-group-item list-group-item-action py-2" (click)="setNewsfeedState('case-comps')" [ngClass]="{active: newsfeedState == 'case-comps'}">Case Comps</button>
         </div>
         <div class="card-block">
@@ -25,9 +26,9 @@
     <div class="col-sm-5 col-md-5 col-lg-5 mt-4">
 
 
-      <div *ngFor="let event of events" style="margin-bottom:2rem">
+      <div *ngFor="let event of events" style="margin-bottom:1rem">
         <!-- Events section -->
-        <div class="card" *ngIf="(event.typeof == 'event') && (newsfeedState == 'events' || newsfeedState == 'all')">
+        <div class="card" *ngIf="(event.typeof == 'event') && (newsfeedState == 'events' || newsfeedState == 'all')" (click)="onSelect(event)">
           <div class="card-img-top">
             <img class="card-img-top" src="assets/img/Startup Consulting.jpg" *ngIf="event.banner == ''">
           </div>
@@ -44,7 +45,7 @@
               </div>
               {{event.start_date_time | getLongDate}}
             </div>
-            <div class="card-footer">
+            <div class="card-footer py-2">
               <img src="assets/img/icons/heart.svg" class="icon">
               <img src="assets/img/icons/bookmark.svg" class="icon">
               <img src="assets/img/icons/arrow.svg" class="icon">
