--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -8,3 +8,6 @@
          ng-model="credentials.password">
   <button type="submit">Login</button>
 </form>
+
+<div class="col-md-9"></div>
+<div class="col-md-3"></div>
