--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -1,13 +1,27 @@
-<form name="loginForm" ng-controller="LoginController"
-      ng-submit="login(credentials)" novalidate>
-  <label for="username">Username:</label>
-  <input type="text" id="username"
-         ng-model="credentials.username">
-  <label for="password">Password:</label>
-  <input type="password" id="password"
-         ng-model="credentials.password">
-  <button type="submit">Login</button>
-</form>
+<div class="container-fluid" style="background-color:#F5F5F5">
+  	<div class="row justify-content-center">
+    	<div class="col-sm-3 col-md-3 col-lg-3 mt-4">
+      		<div class="thumbnail">
+	      		<img src="https://photos.smugmug.com/Art/Graffiti-Art/i-8h7jctZ/2/ff578e56/M/This%20is%20Paradise%202_Toronto1339-M.jpg" alt="Card head photo" class="card-image-top">
+		      	<div class="caption">
+		      		<div class="row">
+		      			<div class="col-md-4">
+			      			<img src="https://www2.mmu.ac.uk/media/mmuacuk/style-assets/images/r-research/profile-Zeyad.jpg" alt="Profile Pic" class="img-circle">
+			      		</div>
+			      		<div class="col-md-8">
+				        	<h3>Mahad Aamir</h3>
+				        	<p class="card-under-name-text">Laurier BBA Candidate</p>
+			        	</div>
+			        </div>
 
-<div class="col-md-9"></div>
-<div class="col-md-3"></div>
+		        	<div class="list-group">
+					  <button type="button" class="list-group-item">Edit Profile</button>
+					  <button type="button" class="list-group-item">Saved Events</button>
+					  <button type="button" class="list-group-item">Saved Posts</button>
+					  <button type="button" class="list-group-item">Lorem</button>
+					</div>
+		      	</div>
+			</div>
+  		</div>
+	</div>
+        
