--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -1,14 +1,14 @@
 <div class="container-fluid" style="background-color:#F5F5F5">
   	<div class="row justify-content-center">
     	<div class="col-sm-3 col-md-3 col-lg-3 mt-4">
-      		<div class="thumbnail user-card">
+      		<div class="user-card">
 	      		<img src="https://photos.smugmug.com/Art/Graffiti-Art/i-8h7jctZ/2/ff578e56/M/This%20is%20Paradise%202_Toronto1339-M.jpg" alt="Card head photo" class="card-image-top">
-		      	<div class="caption">
+		      	<div class="card-content">
 		      		<div class="row">
 		      			<div class="col-md-5">
 			      			<img src="https://www2.mmu.ac.uk/media/mmuacuk/style-assets/images/r-research/profile-Zeyad.jpg" alt="Profile Pic" class="img-circle">
 			      		</div>
-			      		<div class="col-md-7">
+			      		<div class="col-md-7 user-card-text">
 				        	<h3>Mahad Aamir</h3>
 				        	<p class="card-under-name-text">Laurier BBA Candidate</p>
 			        	</div>
