Updates to Login and Profile Sidebar

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,8 @@
 <!-- <div class="" *ngIf="!(authService.userSignedIn$ | async)">
 {{user.name}}
 </div> -->
-<button type="button" (click)="signIn()">Sign in</button>
-<button type="button" (click)="signOut()">Sign out</button>
+<button type="button" class="btn btn-primary" (click)="signIn()">Sign in</button>
+<button type="button" class="btn btn-primary" (click)="signOut()">Sign out</button>
 <div class="login-page">
   <div class="form">
     <form class="register-form">
