--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -17,8 +17,10 @@
         <a class="nav-link" routerLink="/clubs" routerLinkActive="active">GET INVOLVED</a>
       </li>
       <li class="nav-item mr-4">
-        <a class="nav-link" routerLink="/fullteam" routerLinkActive="active">ABOUT US</a>
+        <a class="nav-link" routerLink="/fullteam" routerLinkActive="active">LOGIN</a>
       </li>
     </ul>
   </div>
+</nav>
+<nav class="gold-bar" style="background-color:#F2A900; height:10px">
 </nav>
