--- a/src/app/newsfeed/newsfeed.component.html
+++ b/src/app/newsfeed/newsfeed.component.html
@@ -2,14 +2,14 @@
   <div class="row justify-content-center">
     <div class="col-sm-3 col-md-3 col-lg-3 mt-4">
       <div class="card sticky">
-        <div class="card-header d-flex align-items-center" style="height:80px">
-          <img src="https://www2.mmu.ac.uk/media/mmuacuk/style-assets/images/r-research/profile-Zeyad.jpg" class="avatar mr-2">
-          <div class="d-flex flex-column">
+        <img src="https://photos.smugmug.com/Art/Graffiti-Art/i-8h7jctZ/2/ff578e56/M/This%20is%20Paradise%202_Toronto1339-M.jpg" style="height:100px" class="card-image-top">
+        <img src="https://www2.mmu.ac.uk/media/mmuacuk/style-assets/images/r-research/profile-Zeyad.jpg" class="profile-avatar mr-2">
+        <div class="card-header d-flex align-items-center" style="height:60px">
+          <div class="d-flex flex-column" style="transform:translate(80px,0)">
             <h4 class="profile-name my-0">Richard Hugessen</h4>
             <span class="profile-subheader my-0">Laurier BBA Candidate</span>
           </div>
         </div>
-        <button type="button" class="btn btn-danger" style="border-radius:0">Have something to share?</button>
 
         <div class="list-group">
           <button class="list-group-item list-group-item-action py-2" (click)="setNewsfeedState('all')" [ngClass]="{active: newsfeedState == 'all'}">Discover</button>
@@ -17,9 +17,9 @@
           <button class="list-group-item list-group-item-action py-2" (click)="setNewsfeedState('blog')" [ngClass]="{active: newsfeedState == 'blog'}">Posts</button>
           <button class="list-group-item list-group-item-action py-2" (click)="setNewsfeedState('case-comps')" [ngClass]="{active: newsfeedState == 'case-comps'}">Case Comps</button>
         </div>
-        <div class="card-block">
-          <span class="profile-name">Filters</span>
-        </div>
+      </div>
+      <div class="card sticky mt-2">
+        <span class="list-group-item share_button">Have something to share?</span>
       </div>
     </div>
 
