Blog Content while Moria is down

--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -22,5 +22,5 @@
     </ul>
   </div>
 </nav>
-<nav class="gold-bar" style="background-color:#F2A900; height:10px">
+<nav class="gold-bar sticky-top">
 </nav>
