--- a/src/app/newsfeed/newsfeed.component.html
+++ b/src/app/newsfeed/newsfeed.component.html
@@ -18,7 +18,7 @@
           <button class="list-group-item list-group-item-action py-2" (click)="setNewsfeedState('case-comps')" [ngClass]="{active: newsfeedState == 'case-comps'}">Case Comps</button>
         </div>
       </div>
-      <div class="card sticky mt-2">
+      <div class="card sticky-share mt-2">
         <span class="list-group-item share_button">Have something to share?</span>
       </div>
     </div>
