--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -1,14 +1,17 @@
-<nav class="navbar sticky-top navbar-toggleable-md navbar-inverse bg-faded nav" style="background-color:rgba(66,44,137,1); height:90px">
+<nav class="navbar sticky-top navbar-toggleable-md navbar-inverse bg-faded nav" style="background-color:rgba(66,44,137,1); height:70px">
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <a class="navbar-brand" routerLink="/newsfeed">
-    <img src="../../assets/img/LazsocWhiteLogo.png" width="auto" height="60" alt="">
+    <img src="../../assets/img/LazsocWhiteLogo.png" width="auto" height="55" alt="">
   </a>
   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
     <ul class="navbar-nav mr-4">
       <li class="nav-item mr-4">
         <a class="nav-link" routerLink="/newsfeed" routerLinkActive="active">NEWSFEED</a>
+      </li>
+      <li class="nav-item mr-4">
+        <a class="nav-link" routerLink="/beans" routerLinkActive="active">LAZBEANS</a>
       </li>
       <li class="nav-item mr-4">
         <a class="nav-link" routerLink="/resources" routerLinkActive="active">RESOURCES</a>
