--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
-<laz-navbar></laz-navbar>
+<div style="background-color:#F5F5F5">
+  <laz-navbar></laz-navbar>
+  <div class="row justify-content-center">
+    <div class="col-sm-3 col-md-3 col-lg-3 mt-4">
+      <profile-sidebar></profile-sidebar>
+    </div>
+    <div class="col-sm-5 col-md-5 col-lg-5 mt-4">
+      <router-outlet></router-outlet>
+    </div>
+    <div class="col-sm-3 col-md-3 col-lg-3 mt-4">
+      <sidebar-right></sidebar-right>
+    </div>
+  </div>
 
-<router-outlet></router-outlet>
+</div>
