--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -1,35 +1,16 @@
 <div class="container-fluid" style="background-color:#F5F5F5">
-  	<div class="row justify-content-center">
-    	<!-- <div class="col-sm-3 col-md-3 col-lg-3 mt-4">
-      		<div class="card">
-	      		<img src="https://photos.smugmug.com/Art/Graffiti-Art/i-8h7jctZ/2/ff578e56/M/This%20is%20Paradise%202_Toronto1339-M.jpg" alt="Card head photo" class="card-image-top">
-		      	<div class="card-content">
-		      		<div class="row">
-		      			<div class="col-md-5">
-			      			<img src="https://www2.mmu.ac.uk/media/mmuacuk/style-assets/images/r-research/profile-Zeyad.jpg" alt="Profile Pic" class="img-circle">
-			      		</div>
-			      		<div class="col-md-7 user-card-text">
-				        	<h3>Mahad Aamir</h3>
-				        	<p class="card-under-name-text">Laurier BBA Candidate</p>
-			        	</div>
-			        </div>
-
-		        	<div class="list-group">
-					  <button type="button" class="list-group-item">Edit Profile</button>
-					  <button type="button" class="list-group-item">Saved Events</button>
-					  <button type="button" class="list-group-item">Saved Posts</button>
-					  <button type="button" class="list-group-item">Lorem</button>
-					</div>
-		      	</div>
-			</div>
-  		</div> -->
-
-  		<div class="col-sm-6 col-md-6 col-lg-6 mt-4">
-  			<div class="card content-card">
-  				<h2 class="content-header">Our Clubs</h2>
-  			</div>
-  		</div>
-
-  		<div class="col-sm-3 col-md-3 col-lg-3 mt-4"></div>
+  	<div class="row justify-content-center card">
+  		<div class="content-header">
+    		<h3>Our Clubs</h3>
+    		<p class="under-header-text">The fun outside the classroom</p>
+		</div>
+	</div>
+	<div class="row justify-content-center card">
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 	</div>
 </div>
