MapToIterable for Clubs

--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -3,7 +3,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <a class="navbar-brand" routerLink="/newsfeed">
-    <img src="../../assets/img/LazsocWhiteLogo.png" width="auto" height="55" alt="">
+    <img src="../../assets/img/LazsocWhiteLogo.png" width="auto" height="55" class="ml-3" alt="">
   </a>
   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
     <ul class="navbar-nav mr-4">
