--- a/src/app/sidebar/profile-sidebar.html
+++ b/src/app/sidebar/profile-sidebar.html
@@ -16,5 +16,5 @@
   </div>
 </div>
 <div class="card sticky-share mt-2">
-  <span class="list-group-item share_button">Have something to share?</span>
+  <span class="list-group-item share_button" routerLink="/compose">Have something to share?</span>
 </div>
