--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -22,6 +22,9 @@
       <li class="nav-item mr-4">
         <a class="nav-link" routerLink="/fullteam" routerLinkActive="active">LOGIN</a>
       </li>
+      <li class="nav-item mr-4">
+        <a class="nav-link" routerLink="/compose" routerLinkActive="active">COMPOSE</a>
+      </li>
     </ul>
   </div>
 </nav>
