--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -1,11 +1,21 @@
 <div class="container-fluid" style="background-color:#F5F5F5">
-  	<div class="row justify-content-center card">
-  		<div class="content-header">
-    		<h3>Our Clubs</h3>
-    		<p class="under-header-text">The fun outside the classroom</p>
-		</div>
+  	<div class="row justify-content-center">
+      <div class="col-sm-3 col-md-3 col-lg-3 mt-4 px-2">
+        <profile-sidebar></profile-sidebar>
+      </div>
+      <div class="col-sm-5 col-md-5 col-lg-5 mt-4">
+        <div class="content-header card">
+          <h3>Our Clubs</h3>
+          <p class="under-header-text">The fun outside the classroom</p>
+        </div>
+        <div class="card" *ngFor="let club of clubs | mapToIterable">
+          {{club.val.name}}
+        </div>
+      </div>
+
+    <div class="col-sm-3 col-md-3 col-lg-3 mt-4 px-2">
+      <sidebar-right></sidebar-right>
+    </div>
 	</div>
-  <div class="row justify-content-center card" *ngFor="let club of clubs | mapToIterable">
-    {{club.val.name}}
-  </div>
+
 </div>
