--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -25,6 +25,9 @@
       <li class="nav-item mr-4">
         <a class="nav-link" routerLink="/compose" routerLinkActive="active">COMPOSE</a>
       </li>
+      <li class="nav-item mr-4">
+        <a class="nav-link" routerLink="/hiring" routerLinkActive="active">HIRING</a>
+      </li>
     </ul>
   </div>
 </nav>
