Changes to clubs page
Incorporated new fonts, included placeholders for title, description and tags

--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -15,7 +15,8 @@
 	          		</div>
 	          		<div class="col-sm-8 col-md-8 col-lg-8">
 	          			<h6>{{club.val.name}}</h6>
-	          			<p>{{club.val.description}}</p>
+	          			<p class="tags">Tags</p>
+	          			<p class="club-description">{{club.val.description}}</p>
 	          		</div>
           		</div>
         	</div>
