--- a/src/app/clubs/clubs.component.css
+++ b/src/app/clubs/clubs.component.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Montserrat:200i,300,500,700);
  body{margin:2em;}
 h2 {margin:1em 0;}
 
@@ -24,10 +25,21 @@ h3 {
 	font-weight: 700;
 	font-size: 30px;
 	margin-bottom: 0;
+	font-family: Montserrat, sans-serif;
+	color:#000000;
+	letter-spacing:0;
+	text-align:left;
 }
 
 h6 {
-	font-weight: 700;
+	font-weight: 500;
+	font-size: 16px;
+	font-family: Montserrat, sans-serif;
+	color:#000000;
+	letter-spacing:0;
+	text-align:left;
+	margin-bottom: 0;
+	margin-top: 35px; 
 }
 
 .card {
@@ -53,4 +65,28 @@ h6 {
 .logo {
 	width: 160.325px;
 	height: 160.325px;
+}
+
+.club-description {
+	font-weight: 300;
+	font-size: 12px;
+	font-family: Montserrat, sans-serif;
+	color:#000000;
+	letter-spacing:0;
+	text-align:left;
+	line-height: 1.5em;
+    height: 4.2em;       /* height is 2x line-height, so two lines will display */
+    overflow: hidden; 
+    text-overflow: ellipsis;
+}
+
+.tags {
+	font-weight: 200;
+	font-style: italic;
+	font-size:12px;
+	font-family: Montserrat, sans-serif;
+	color:#83868a;
+	letter-spacing:0;
+	text-align:left;
+	margin-bottom: 2px;
 }
