--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -15,14 +15,17 @@
 	          		</div>
 	          		<div class="col-sm-8 col-md-8 col-lg-8">
 	          			<h6>{{club.val.name}}</h6>
-	          			<p class="tags">Tags</p>
-	          			<p class="club-description">{{club.val.description}}</p>
+	          			<p id="tags">Tags</p>
+	          			<div class="line-clamp-wrapper">
+	          				<p class="club-description line-clamp">{{club.val.description}}</p>
+	          			</div>
 	          		</div>
           		</div>
         	</div>
       	</div>
 
 	    <div class="col-sm-3 col-md-3 col-lg-3 mt-4 px-2">
+
 	      	<sidebar-right></sidebar-right>
 	    </div>
 	</div>
