Implemented corrects tags underneath club title

--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -15,7 +15,9 @@
 	          		</div>
 	          		<div class="col-sm-8 col-md-8 col-lg-8">
 	          			<h6>{{club.val.name}}</h6>
-	          			<p id="tags">Tags</p>
+	          			<div class="row container" id="bottom_margin_2">
+	          				<p class="tags" *ngFor="let tag of club.val.club_tags">{{tag.tag}} &bull; &nbsp;</p>
+	          			</div>
 	          			<div class="line-clamp-wrapper">
 	          				<p class="club-description line-clamp">{{club.val.description}}</p>
 	          			</div>
