--- a/src/app/clubs/clubs.component.css
+++ b/src/app/clubs/clubs.component.css
@@ -74,7 +74,7 @@ h6 {
 }
 
 .line-clamp {
-	width: 360px;
+	width: 450px;
 	line-height: 15px;
 	overflow-wrap: break-word;
 	word-wrap: break-word;
@@ -89,13 +89,18 @@ h6 {
 	text-align:left;
 }
 
-#tags {
+.tags {
 	font-weight: 200;
 	font-style: italic;
 	font-size:12px;
 	font-family: Montserrat, sans-serif;
 	color:#83868a;
 	letter-spacing:0;
+	margin: 0;
 	text-align:left;
+	letter-spacing:0;
+}
+
+#bottom_margin_2 {
 	margin-bottom: 2px;
 }
